JWT기반 login 구현 - spring security를 통해 사용자 정보를 인증하고 JWT를 발급 - ExceptionAdvice를 통해 서비스에서 발생하는 예외를 통합 처리 - 로그인 기능을 확인을 위해 간단한 Account 생성 api를 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 0
+  port: 8080
 
 spring:
   application:
@@ -13,12 +13,18 @@ spring:
     hibernate:
       ddl-auto: create
 
-eureka:
-  instance:
-    instance-id: ${spring.cloud.client.hostname}:${spring.application.instance.id:${random.value}}
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://127.0.0.1:8761/eureka
+#eureka:
+#  instance:
+#    instance-id: ${spring.cloud.client.hostname}:${spring.application.instance.id:${random.value}}
+#  client:
+#    register-with-eureka: true
+#    fetch-registry: true
+#    service-url:
+#      defaultZone: http://127.0.0.1:8761/eureka
+
+jwt:
+  secret-key: 28d93268-a80b-4594-918b-5926a79a49ed
+  expiration: 36000000
+  prefix: Bearer
+  header: Authorization
 
