--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -5,17 +5,22 @@ spring:
   application:
     name: videoservice
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3305/videoService
-    username: hipo
-    password: 123456
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:test
+    username: sa
+    password:
   jpa:
     hibernate:
       ddl-auto: create
+    defer-datasource-initialization: true
     properties:
       hibernate:
         default_batch_fetch_size: 100
-    defer-datasource-initialization: true
+  data:
+    web:
+      pageable:
+        default-page-size: 10
+        one-indexed-parameters: true
   sql:
     init:
       data-locations: classpath:static/db/data.sql
@@ -24,11 +29,6 @@ spring:
     multipart:
       max-file-size: 100MB
       max-request-size: 100MB
-  data:
-    web:
-      pageable:
-        default-page-size: 10
-        one-indexed-parameters: true
 
 
 #eureka:
@@ -45,4 +45,3 @@ jwt:
   expiration: 36000000
   prefix: Bearer
   header: Authorization
-
