영상 업로드, 조회 Api 구현 - 영상 파일 조회는 파일을 한번에 받는 구조

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,6 +30,7 @@ spring:
         default-page-size: 10
         one-indexed-parameters: true
 
+dir : /Users/hipo/Desktop/project/toy_project/video/videoservice/src/main/resources/video/
 
 #eureka:
 #  instance:
