영상 스트리밍 API 명세 생성

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -30,6 +30,7 @@ spring:
       max-file-size: 100MB
       max-request-size: 100MB
 
+dir : /Users/hipo/Desktop/project/toy_project/video/videoservice/src/test/resources/video/
 
 #eureka:
 #  instance:
