--- a/build.gradle
+++ b/build.gradle
@@ -44,9 +44,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     implementation group: 'com.google.code.gson', name: 'gson'
-    implementation 'org.apache.tika:tika-core:2.4.1'
-    implementation 'org.apache.tika:tika-parsers:2.4.1'
     implementation 'net.bramp.ffmpeg:ffmpeg:0.6.2'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
 
     //db
     runtimeOnly 'com.h2database:h2'
